# bardly

./: .gitignore  .pre-commit-config.yaml  Brewfile.netlify  CONTRIBUTING.md  GitHub Desktop.lnk  Midummer 11.md  README.md  Typora.lnk  build.py  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
PyCharm Community Edition 2020.1.1/: build.txt  product-info.json
PyCharm Community Edition 2020.1.1/index/Python/: id-index.input  id-index.input.keystream  id-index.input.keystream.len  id-index.input.len  id-index.input.values.at  id-index.input.values.s  id-index.input_i  sdk-stubs.input  sdk-stubs.input.keystream  sdk-stubs.input.keystream.len  sdk-stubs.input.len  sdk-stubs.input.values.at  sdk-stubs.input.values.s  sdk-stubs.input_i  sdk-stubs.names.keystream  sdk-stubs.names_i  sdk-stubs.version
PyCharm Community Edition 2020.1.1/jbr/: release
PyCharm Community Edition 2020.1.1/jbr/lib/: classlist  javafx.properties  jawt.lib  jvm.lib
PyCharm Community Edition 2020.1.1/license/: third-party-libraries.html
bardly/: .pages  _redirects  contributing.md  index.md  plugin.py  scaffold.py
bardly/plays/: .pages
bardly/plays/comedies/: index.md
bardly/plays/histories/: index.md
bardly/static/: site.webmanifest
bardly/static/javascripts/: tablesort.js
bardly/static/stylesheets/: extra.css
dev/: mkdocs.yml
dev/bardly/: 11-player.md  index.md  static  uncut.md
dev/bardly/static/: browserconfig.xml
dev/overrides/: main.html
overrides/: main.html
pending/: base.user.css
pending/problems/all-s-well-that-ends-well/: .pages  11-player.md  12-player-alt.md  uncut.md  unverified.md
pending/roman/coriolanus/: .pages  (+4 more)
site/: 404.html  _redirects  index.html  sitemap.xml
site/contributing/: index.html
site/static/: site.webmanifest
(+375 files in other folders)
