[tool.poetry]
name = "bardly"
version = "0.1.0"
description = "Your one-stop shop for all things Shakespeare!"
authors = ["Sean Stewart <sean_stewart@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
iambic = "^1.0.1"
mkdocs = "^1.1"
mkdocs-material = "^5.0.2"
mkdocs-awesome-pages-plugin = "^2.2.1"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
